port to JavaFX
and create a visualization of statistics